I added get_method_project

--- a/4-http-server/get_method_project/index.html
+++ b/4-http-server/get_method_project/index.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Products</title>
-    <link rel="stylesheet" href="/style.css">
- <!--    <style>
+    <title>[[</title>
+
+  <!--   <link rel="stylesheet" href="/style.css"> -->
+    <style>
         .container{
             display: flex;
             flex-wrap: wrap;
@@ -18,9 +19,26 @@
             padding: 2%;
         }
 
-    </style> -->
+        .red{
+            background-color: red;
+        }
+
+    </style>
 </head>
 <body>
+    <nav></nav>
     @@
+    <footer></footer>
+  <!--   <script>
+        fetch("/?doors=2", {
+            method:"GET",
+        }).then(data=>{
+            data.text().then(d=>{
+                console.log(d)
+            })
+        }).catch(error=>{
+            console.log(error)
+        })
+    </script> -->
 </body>
 </html>
